# autobackup

./: README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  search.json  settings.ini  sitemap.xml
.github/workflows/: test.yaml
autobackup/: core.py
nbs/: 00_core.ipynb  index.ipynb
